Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/8194932/T8194932.out
T8194932.java:11:12: compiler.err.ref.ambiguous: m, kindname.method, m(), Foo, kindname.method, m(), Foo
1 error
